# inference_probabilistic_mlc

./: .Dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  LossMetric.md  MANIFEST.in  Makefile  README.md  REFACTOR_PLAN.md  environment.yml  example_result.py  inference_evaluate_models.py  probability_classifier_chains.py  pyproject.toml  requirements-core.txt  requirements.txt  run
configs/: paper.yaml
dacaf_mlc/: __init__.py  arff_dataset.py  config.py  datasets.py  evaluate.py  evaluation_metrics.py  metrics_registry.py  pipeline.py  probability_classifier_chains.py  utils.py
datasets/: CHD_49.arff  Data_Entry_2017__testset.csv  NIH_Data_Entry_2017__testset.csv  NIH_Data_Entry_2017__testset2.csv  NIH_Data_Entry_2017__testset_image_labels.csv  PlantPseAAC.arff  VirusGO.arff  VirusGO_sparse.arff  Water-quality.arff  Yeast.arff  nih_feature_vectors.npy  nih_feature_vectors__labels.npy
docs/: CONVENTIONS.md  EXTENDING.md  REPRODUCING.md  REPRODUCTION_NOTES.md
result/: evaluation_results.csv  evaluation_results_crosstab.csv  note.md  paper_tables.tex  result_CHD_49.csv  result_CHD_49_crosstab.csv  result_CHD_49_summary.csv  result_PlantPseAAC.csv  result_PlantPseAAC_crosstab.csv  result_PlantPseAAC_summary.csv  result_VirusGO_sparse.csv  result_VirusGO_sparse_crosstab.csv  result_VirusGO_sparse_summary.csv  result_Water-quality.csv  result_Water-quality_crosstab.csv  result_Water-quality_summary.csv  result_chest_xray_nih.csv  result_chest_xray_nih__densenet.csv  result_chest_xray_nih__densenet_crosstab.csv  result_chest_xray_nih__densenet_summary.csv  result_chest_xray_nih__resnet.csv  result_chest_xray_nih__resnet_crosstab.csv  result_chest_xray_nih__resnet_summary.csv  result_chest_xray_nih__resnetae.csv  result_chest_xray_nih__resnetae_crosstab.csv  result_chest_xray_nih__resnetae_summary.csv  result_chest_xray_nih_crosstab.csv  result_emotions.csv  result_emotions_crosstab.csv  (+10 more)
src/: utils.py  (+4 more)
(+54 files in other folders)
